# gpuexamples

matmul/: CMakeLists.txt
matmul/include/: gemm.cuh
matmul/src/: gemm.cu  matmul.cu
